<resources>
    <string name="app_name">ShottyApp</string>
    <string name="title_login">Bienvenido</string>
    <string name="registrate">Registrate</string>
    <string name="entrar">Entrar</string>
    <string name="usuario">Usuario</string>
    <string name="password">Password</string>
    <string name="title_activity_maps">Map</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="nav_home">Inicio</string>
    <string name="nav_restaurante">Restaurante / Bar</string>
    <string name="nav_discotecas">Discotecas</string>
    <string name="nav_promo">Promociones</string>
    <string name="nav_reserva">Reservaciones</string>
    <string name="nav_logout">Cerrar Sesion</string>
    <string name="open_menu">Menu Abierto</string>
    <string name="close_menu">Menu Cerrado</string>
    <string name="nav_profile">Profile</string>
    <string name="eventos">Eventos</string>
    <string name="restaurante">Restaurante / Bar</string>
    <string name="discotecas">Discotecas</string>
    <string name="promociones">Promociones</string>
    <string name="reservas">Reservas</string>
    <string name="synopsis">detalle</string>
    <string name="menu">menu</string>
    <string name="username">username</string>
    <string name="email">Email</string>
    <string name="registro_existente">El nombre de usuario ya se encuentra registrado</string>
    <string name="error_servidor_registro">Fallo conexion a Internet</string>
    <string name="cargando">Cargando</string>
    <string name="falla">Fallo el servidor</string>
    <string name="errorcontra">Contraseña erronea</string>
    <string name="like">Me gusta</string>
    <string name="reservabien">Reserva registrada</string>
    <string name="reservamal">Reserva no registrada</string>

    <string-array name="Ocasiones">
        <item>Cumpleaños</item>
        <item>Negocios</item>
        <item>Romantica</item>
        <item>Aniversario</item>
        <item>Graduacion</item>
        <item>Casual</item>
        <item>Otro</item>
    </string-array>
    <string name="title_activity_menu">MenuActivity</string>


</resources>
