<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item android:id="@+id/nav_home"
            android:title="@string/nav_home"
            android:icon="@drawable/ic_home"
        />

    <item android:id="@+id/nav_restaurant"
        android:title="@string/nav_restaurante"
        android:icon="@drawable/ic_restaurant"
        />

    <item android:id="@+id/nav_discoteca"
        android:title="@string/nav_discotecas"
        android:icon="@drawable/ic_people_black"
        />

    <item android:id="@+id/nav_promo"
        android:title="@string/nav_promo"
        android:icon="@drawable/ic_money"
        />

    <item android:id="@+id/nav_reserva"
        android:title="@string/nav_reserva"
        android:icon="@drawable/ic_reserva"
        />


    <item android:title="@string/nav_profile">

    <menu>

    <item android:id="@+id/nav_exit"
        android:title="@string/nav_logout"
        android:icon="@drawable/ic_exit_to"
        />
        </menu>
    </item>

</menu>