<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    >

    <data>
        <variable
            name="handler"
            type="com.example.pcportatil.shottyapp.LoginActivity"/>

    </data>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="*"
        tools:context="com.example.pcportatil.shottyapp.LoginActivity">

        <FrameLayout
            android:layout_height="0dp"
            android:layout_weight="1">

            <ImageView
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:src="@drawable/login_bg"
                android:scaleType="centerCrop" />

            <TextView
                style="@style/Base.TextAppearance.AppCompat.Headline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_login"
                android:layout_gravity="bottom"
                android:textColor="#fff"
                android:padding="@dimen/Pad_title_login"
                android:textAlignment="center" />


        </FrameLayout>


        <LinearLayout
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center"
            android:padding="@dimen/Pad_title_login">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/medium">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:hint="@string/usuario" />

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:hint="@string/password" />

            </android.support.design.widget.TextInputLayout>


        </LinearLayout>

        <TableRow>

            <Button
                style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
                android:text="@string/registrate" />

            <Button
                android:onClick="@{()-> handler.goToMain()}"
                android:id="@+id/BtnEntrar"
                style="@style/Base.Widget.AppCompat.Button.Colored"
                android:text="@string/entrar" />


        </TableRow>


    </TableLayout>
</layout>

